--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -149,7 +149,7 @@
    
     var data = JSON.parse(localStorage.getItem(`${blockTur}checkbox${blockCount}`));
 
-  
+    // ViewBag.UserInfo
 
     function createCustomCheckbox(id) 
     {
