--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -99,6 +99,10 @@ a {
 
 #InfoValue {
     display: grid;
+    border-left: 2px solid grey;
+    border-right: 2px solid grey;
+    padding-right:10px;
+    overflow-x:scroll;
 }
 #InformBar {
     margin-top: 50px;
@@ -428,7 +432,7 @@ a {
     grid-template-columns: 30px;
     background-color: #EDEDED;
     padding: 5px;
-}
+}FinihserCostInfo
 .TexCountTurFinisher {
     max-width: 290px;
     text-align: center;
@@ -481,10 +485,18 @@ a {
     cursor: pointer;
 }
 #blockInfo {
-    width: 300px
+    width: 300px;
+    text-align: start;
+}
+#TexCountTurFinisher > h5{
+    margin-left: 50px;
+}
+#TexCountTurFinisher > h6{
+    margin-left: 50px;
 }
 #turInfo {
     display: flex;
+    border: 2px solid gray;
 }
 .checkboxContainer {
     display: grid;
@@ -507,14 +519,20 @@ summary {
     margin-top: -25px;
     padding: 0px;
 }
+#OpenValue {
+    display: flex;
+    gap: 10px;
+    margin-left: 150px;
+}
 #finisherItem {
     border-radius: 10px;
     margin-top: 20px;
     padding: 10px;
     background-color: white;
-    display: flex;
+    display: grid;
     align-items: center;
     text-align: center;
+    grid-template-columns: 100px 200px 950px;
 }
 #ItemCounterOrders {
     display: flex;
@@ -604,3 +622,14 @@ summary {
         text-decoration: none;
         cursor: pointer;
     }
+#FinihserCostInfo {
+    display: flex;
+    gap: 500px;
+    margin-top: 50px;
+}
+#finisherButton {
+    text-align: end;
+}
+#finisherButton>button{
+    height:50px;
+}
