--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -274,7 +274,7 @@
                 </div>
             }
         }*@
-        @if (ViewBag.Doppel != null && ViewBag.Knaufzylinder != null)
+        @if (ViewBag.Doppel != null && ViewBag.Knaufzylinder != null && ViewBag.Halb == null && ViewBag.Hebel == null && ViewBag.VorhanSchloss == null && ViewBag.Aussen == null)
         {
             foreach (var item in ViewBag.Doppel)
             {
